Fix section 4 wrapping issue

--- a/style.css
+++ b/style.css
@@ -189,12 +189,15 @@ li:hover {
 .m4 .box {
   box-sizing: border-box;
   width: 1000px;
-  height: 125px;
+  /*height: 125px;*/
   background-color: #3882f6;
   border-radius: 10px;
-  padding: 25px 150px;
   display: flex;
   align-items: center;
+  justify-content: center;
+  padding: 32px 8px;
+  flex: 0 1 auto;
+  gap: 16px;
 }
 
 .m4 .left {
@@ -202,6 +205,7 @@ li:hover {
   flex-direction: column;
   justify-content: center;
   gap: 5px;
+  flex: 0 1 461px;
 }
 
 .call-to-action {
@@ -222,7 +226,7 @@ li:hover {
   display: flex;
   align-items: center;
   justify-content: end;
-  flex-grow: 1;
+  flex: 0 1 200px;
 }
 
 .bttn-container .signup {
